--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469819047357">
+<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469822851006">
 
 <link rel="alternate" type="application/rss+xml" title="Fight for the Future News" href="/news/feed.xml" />
 
@@ -96,7 +96,7 @@
     <article class="petition-text">
       <h2>Tell the Secretary of the Army: "Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</h2>
       <blockquote>
-        
+        <p>Tell the Secretary of the Army: Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</p>
 
       </blockquote>
     </article>
@@ -1225,8 +1225,8 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
 
 <script type="text/javascript" src="https://fftf.io/js/client.js"></script>
 
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469819047368"></script>
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469819047368"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469822851014"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469822851014"></script>
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
