--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469822851006">
+<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469826186146">
 
 <link rel="alternate" type="application/rss+xml" title="Fight for the Future News" href="/news/feed.xml" />
 
@@ -96,7 +96,7 @@
     <article class="petition-text">
       <h2>Tell the Secretary of the Army: "Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</h2>
       <blockquote>
-        <p>Tell the Secretary of the Army: Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</p>
+        <p>Tell the Secretary of the Army: Punishing Chelsea Manning for attempting to ta-ke her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</p>
 
       </blockquote>
     </article>
@@ -1159,9 +1159,10 @@
 
   </section>
   <article class="petition-info">
-    <p>After years of inhumane treatment, having been held in conditions that the UN considers to be <a href="https://www.theguardian.com/world/2012/mar/12/bradley-manning-cruel-inhuman-treatment-un">torture</a>, Chelsea Manning, the Guardian columnist and whistleblower who has been in prison for <a href="http://www.theguardian.com/commentisfree/2015/may/27/anniversary-chelsea-manning-arrest-war-diaries">years</a> serving a 35 year sentence for <a href="http://www.theguardian.com/world/2013/aug/21/bradley-manning-35-years-prison-wikileaks-sentence">exposing</a> some of the U.S. government’s worst abuses, attempted to take her own life July 5th, 2016.</p>
+    <p><img src="https://s3.fightforthefuture.org/img/action-network/chelsea (1).png?1469826186116" alt="chelsea (1).png" />
+After years of inhumane treatment, and having been held in conditions that the UN considers to be <a href="https://www.theguardian.com/world/2012/mar/12/bradley-manning-cruel-inhuman-treatment-un">torture</a>, Chelsea Manning, the Guardian columnist and whistleblower who has been in prison for <a href="http://www.theguardian.com/commentisfree/2015/may/27/anniversary-chelsea-manning-arrest-war-diaries">years</a> serving a 35 year sentence for <a href="http://www.theguardian.com/world/2013/aug/21/bradley-manning-35-years-prison-wikileaks-sentence">exposing</a> some of the U.S. government’s worst abuses, attempted to take her own life July 5th, 2016.</p>
 
-<p>Now, Army officials have <a href="https://www.aclu.org/news/chelsea-manning-faces-new-charges-indefinite-solitary-confinement-related-suicide-attempt">informed her</a> that she is facing serious new charges directly related to her suicide attempt. These <a href="https://www.aclu.org/legal-document/chelsea-manning-charge-sheet">new charges</a> include:</p>
+<p>Now, Army officials have <a href="https://www.aclu.org/news/chelsea-manning-faces-new-charges-indefinite-solitary-confinement-related-suicide-attempt">informed her</a> that she is facing serious <a href="https://www.aclu.org/legal-document/chelsea-manning-charge-sheet">new charges</a> directly related to her suicide attempt. These new charges include:</p>
 
 <p>1) <strong>Resisting the force cell move team</strong> (Chelsea was unconscious when this team arrived, which makes this charge particularly absurd.)</p>
 
@@ -1169,7 +1170,7 @@
 
 <p>3) <strong>Conduct which threatens</strong> (For somehow putting the prison at risk while attempting to take her own life, quietly, in her own cell.)</p>
 
-<p>If convicted of these bizarre “administrative <a href="http://arba.army.pentagon.mil/documents/army%20corrections%20command/Institutional%20Offense%20Policy.pdf">offenses</a>,” that are directly related to her attempt to end her life after systemic abuse and the torture of solitary confinement, she is facing a move to a maximum security facility, indefinite solitary confinement for the rest of her prison term (another 30 years) and nearly a decade before she can be moved to a minimum security facility.</p>
+<p>If convicted of these bizarre “administrative <a href="http://arba.army.pentagon.mil/documents/army%20corrections%20command/Institutional%20Offense%20Policy.pdf">offenses</a>,” that are effectively charging her for attempting to end her life,  she is facing indefinite solitary confinement for the rest of her prison term (another 30 years), “maximum security” classification (in the same facility), and nearly a decade before she can ever be classified as a “minimum security” prisoner.</p>
 
 <p>It is unnecessarily cruel to threaten Chelsea with additional punishment while in this very vulnerable state. The government is trying to silence her important voice––for good.
 Chelsea has been systematically mistreated by the U.S. government since she was first taken into custody in 2010, including long stretches of extreme solitary confinement even before she had ever been convicted.</p>
@@ -1225,8 +1226,8 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
 
 <script type="text/javascript" src="https://fftf.io/js/client.js"></script>
 
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469822851014"></script>
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469822851014"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469826186157"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469826186158"></script>
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
