fixes fftf.org stuff

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="The government tortured her until she tried to take her own life. Now they’re threatening her with new charges and indefinite solitary confinement."/>
 <meta name="twitter:domain" content="www.fightforthefuture.org">
 <meta name="twitter:account_id" content="382376904"/>
-<meta name="twitter:text" content="Chelsea Manning faces indefinite solitary for trying to take own her life after years of abuse FreeChelsea.com" />
+<meta name="twitter:text" content="Chelsea Manning faces indefinite solitary for trying to take own her life after years of abuse" />
 <meta name="twitter:image" content="https://www.fightforthefuture.org/img/share/fftf-share.jpg">
 
 <!-- google+ -->
@@ -55,7 +55,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469836777411">
+<link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469837221725">
 
 <link rel="alternate" type="application/rss+xml" title="Fight for the Future News" href="/news/feed.xml" />
 
@@ -69,10 +69,10 @@
   </span>
   <ul class="stickybar-share-donate">
     <li class="stickybar-share-links">
-      <a href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.fightforthefuture.org%2F2016%2Fsave-chelsea%2F" class="stickybar-facebook-share">
+      <a href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.freechelsea.com%2F" class="stickybar-facebook-share">
         facebook
       </a>
-      <a href="https://twitter.com/intent/tweet?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse+FreeChelsea.com&amp;url=https%3A%2F%2Fwww.fightforthefuture.org%2F2016%2Fsave-chelsea%2F" class="stickybar-twitter-share">
+      <a href="https://twitter.com/intent/tweet?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse&amp;url=https%3A%2F%2Fwww.freechelsea.com%2F" class="stickybar-twitter-share">
         Twitter
       </a>
     </li>
@@ -96,7 +96,7 @@
     <article class="petition-text">
       <h2>Tell the Secretary of the Army: "Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</h2>
       <blockquote>
-        <p>Tell the Secretary of the Army: Punishing Chelsea Manning for attempting to ta-ke her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</p>
+        <p>Tell the Secretary of the Army: Punishing Chelsea Manning for attempting to take her own life after systemic mistreatment is inhumane. Drop these new charges, and immediately give Chelsea access to adequate health care.</p>
 
       </blockquote>
     </article>
@@ -1159,7 +1159,7 @@
 
   </section>
   <article class="petition-info">
-    <p><img src="https://s3.fightforthefuture.org/img/action-network/chelsea (1).png?1469836777389" alt="chelsea (1).png" />
+    <p><img src="https://s3.fightforthefuture.org/img/action-network/chelsea (1).png?1469837221699" alt="chelsea (1).png" />
 After years of inhumane treatment, and having been held in conditions that the UN considers to be <a href="https://www.theguardian.com/world/2012/mar/12/bradley-manning-cruel-inhuman-treatment-un">torture</a>, Chelsea Manning, the Guardian columnist and whistleblower who has been in prison for <a href="http://www.theguardian.com/commentisfree/2015/may/27/anniversary-chelsea-manning-arrest-war-diaries">years</a> serving a 35 year sentence for <a href="http://www.theguardian.com/world/2013/aug/21/bradley-manning-35-years-prison-wikileaks-sentence">exposing</a> some of the U.S. government’s worst abuses, attempted to take her own life July 5th, 2016.</p>
 
 <p>Now, Army officials have <a href="https://www.aclu.org/news/chelsea-manning-faces-new-charges-indefinite-solitary-confinement-related-suicide-attempt">informed her</a> that she is facing serious <a href="https://www.aclu.org/legal-document/chelsea-manning-charge-sheet">new charges</a> directly related to her suicide attempt. These new charges include:</p>
@@ -1191,10 +1191,10 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
 <footer class="action-network-footer blue-one-column">
   <p class="an-footer-cta">Help us spread the word:</p>
   <section class="share-this-button-links">
-    <a class="share-this-fb" href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.fightforthefuture.org%2F2016%2Fsave-chelsea%2F">
+    <a class="share-this-fb" href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.freechelsea.com%2F">
       Share this
     </a>
-    <a class="share-this-tw" href="https://twitter.com/share?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse+FreeChelsea.com&amp;url=https%3A%2F%2Fwww.fightforthefuture.org%2F2016%2Fsave-chelsea%2F">
+    <a class="share-this-tw" href="https://twitter.com/share?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse&amp;url=https%3A%2F%2Fwww.freechelsea.com%2F">
       Tweet this
     </a>
     <a class="share-this-donate" href="https://donate.fightforthefuture.org/?utm_source=share-this-buttons&amp;utm_medium=web&amp;utm_campaign=save-chelsea">
@@ -1226,8 +1226,8 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
 
 <script type="text/javascript" src="https://fftf.io/js/client.js"></script>
 
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469836777415"></script>
-<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469836777415"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/smoothscroll.min.js?1469837221730"></script>
+<script type="text/javascript" src="https://s3.fightforthefuture.org/js/core.js?1469837221730"></script>
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
