For the facebook crawler

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <!-- facebook -->
 <meta property="og:url" content="https://www.freechelsea.com/"/>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="https://www.fightforthefuture.org/img/share/fftf-share.jpg"/>
-<meta property="og:image:width" content=""/>
-<meta property="og:image:height" content=""/>
-<meta property="og:site_name" content="Fight for the Future"/>
+<meta property="og:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png"/>
+<meta property="og:image:width" content="1024"/>
+<meta property="og:image:height" content="512"/>
+<meta property="og:site_name" content="Free Chelsea!"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:locale:alternate" content="en_GB"/>
 <meta property="og:title" content="Chelsea Manning is being charged for her own suicide attempt."/>
@@ -31,18 +31,18 @@
 
 <!-- twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="fightfortheftr">
+<meta name="twitter:site" content="xychelsea">
 <meta name="twitter:title" content="Chelsea Manning is being charged for her own suicide attempt.">
 <meta name="twitter:description" content="The government tortured her until she tried to take her own life. Now they’re threatening her with new charges and indefinite solitary confinement."/>
-<meta name="twitter:domain" content="www.fightforthefuture.org">
-<meta name="twitter:account_id" content="382376904"/>
+<meta name="twitter:domain" content="www.freechelsea.com">
+<meta name="twitter:account_id" content="1694040764"/>
 <meta name="twitter:text" content="Chelsea Manning faces indefinite solitary for trying to take own her life after years of abuse" />
-<meta name="twitter:image" content="https://www.fightforthefuture.org/img/share/fftf-share.jpg">
+<meta name="twitter:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png">
 
 <!-- google+ -->
 <meta itemprop="name" content="Chelsea Manning is being charged for her own suicide attempt.">
 <meta itemprop="description" content="The government tortured her until she tried to take her own life. Now they’re threatening her with new charges and indefinite solitary confinement.">
-<meta itemprop="image" content="https://www.fightforthefuture.org/img/share/fftf-share.jpg">
+<meta itemprop="image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png">
 <!-- /*** social meta *** -->
 
 <link rel="publisher" href="https://plus.google.com/102356128596404327231">
@@ -57,7 +57,6 @@
 
 <link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1469837221725">
 
-<link rel="alternate" type="application/rss+xml" title="Fight for the Future News" href="/news/feed.xml" />
 
 </head>
 
@@ -1160,7 +1159,7 @@
   </section>
   <article class="petition-info">
     <p><img src="https://s3.fightforthefuture.org/img/action-network/chelsea (1).png?1469837221699" alt="chelsea (1).png" />
-After years of inhumane treatment, and having been held in conditions that the UN considers to be <a href="https://www.theguardian.com/world/2012/mar/12/bradley-manning-cruel-inhuman-treatment-un">torture</a>, Chelsea Manning, the Guardian columnist and whistleblower who has been in prison for <a href="http://www.theguardian.com/commentisfree/2015/may/27/anniversary-chelsea-manning-arrest-war-diaries">years</a> serving a 35 year sentence for <a href="http://www.theguardian.com/world/2013/aug/21/bradley-manning-35-years-prison-wikileaks-sentence">exposing</a> some of the U.S. government’s worst abuses, attempted to take her own life July 5th, 2016.</p>
+After years of inhumane treatment, and having been held in conditions that the UN considers to be <a href="https://www.theguardian.com/world/2012/mar/12/bradley-manning-cruel-inhuman-treatment-un">torture</a>, Chelsea Manning, the Guardian columnist and whistleblower who has been in prison for <a href="http://www.theguardian.com/commentisfree/2015/may/27/anniversary-chelsea-manning-arrest-war-diaries">years</a> serving a 35 year sentence for exposing some of the U.S. government’s worst abuses, attempted to take her own life July 5th, 2016.</p>
 
 <p>Now, Army officials have <a href="https://www.aclu.org/news/chelsea-manning-faces-new-charges-indefinite-solitary-confinement-related-suicide-attempt">informed her</a> that she is facing serious <a href="https://www.aclu.org/legal-document/chelsea-manning-charge-sheet">new charges</a> directly related to her suicide attempt. These new charges include:</p>
 
