fixes ="/ referring to fftf.org

--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
 
       <input type="hidden" name="subscription[group]" value="13162" form="petition-form" id="opt-in"/>
 
-      <p><a href="/">Fight for the Future</a> will send you updates on this &amp; other campaigns. <a href="/privacy/">Privacy</a></p>
+      <p><a href="https://www.fightforthefuture.org/">Fight for the Future</a> will send you updates on this &amp; other campaigns. <a href="https://www.fightforthefuture.org/privacy/">Privacy</a></p>
 
     </label>
 
@@ -1204,7 +1204,7 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
   <section class="footer-meta-links">
     <div class="an-footer-meta">
       <p>Built by:</p>
-      <a href="/" class="an-footer-logo">
+      <a href="https://www.fightforthefuture.org/" class="an-footer-logo">
           Fight for the Future
       </a>
     </div>
