--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- facebook -->
 <meta property="og:url" content="https://www.freechelsea.com/"/>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png"/>
+<meta property="og:image" content="https://www.freechelsea.com/chelseashare.jpg"/>
 <meta property="og:image:width" content="1024"/>
 <meta property="og:image:height" content="512"/>
 <meta property="og:site_name" content="Free Chelsea!"/>
@@ -37,7 +37,7 @@
 <meta name="twitter:domain" content="www.freechelsea.com">
 <meta name="twitter:account_id" content="1694040764"/>
 <meta name="twitter:text" content="Chelsea Manning faces indefinite solitary for trying to take own her life after years of abuse" />
-<meta name="twitter:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png">
+<meta name="twitter:image" content="https://www.freechelsea.com/chelseashare.jpg">
 
 <!-- google+ -->
 <meta itemprop="name" content="Chelsea Manning is being charged for her own suicide attempt.">
