--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <!-- facebook -->
 <meta property="og:url" content="https://www.freechelsea.com/"/>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="https://www.freechelsea.com/chelseashare.jpg"/>
-<meta property="og:image:width" content="800"/>
-<meta property="og:image:height" content="800"/>
+<meta property="og:image" content="https://www.freechelsea.com/chelseashare2.jpg"/>
+<meta property="og:image:width" content="1200"/>
+<meta property="og:image:height" content="628"/>
 <meta property="og:site_name" content="Free Chelsea!"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:locale:alternate" content="en_GB"/>
