--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <meta property="og:url" content="https://www.freechelsea.com/"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png"/>
-<meta property="og:image:width" content=""/>
-<meta property="og:image:height" content=""/>
-<meta property="og:site_name" content="Free Chelsea"/>
+<meta property="og:image:width" content="1024"/>
+<meta property="og:image:height" content="512"/>
+<meta property="og:site_name" content="Free Chelsea!"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:locale:alternate" content="en_GB"/>
 <meta property="og:title" content="Chelsea Manning is being charged for her own suicide attempt."/>
@@ -30,9 +30,9 @@
 <meta name="twitter:title" content="Chelsea Manning is being charged for her own suicide attempt.">
 <meta name="twitter:description" content="The government tortured her until she tried to take her own life. Now they’re threatening her with new charges and indefinite solitary confinement.#standwithchelsea"/>
 <meta name="twitter:domain" content="www.freechelsea.com">
-<meta name="twitter:account_id" content="382376904"/>
+<meta name="twitter:account_id" content="1694040764"/>
 <meta name="twitter:text" content="Chelsea Manning faces indefinite solitary for trying to take own her life after years of abuse" />
-<meta name="twitter:image" content="https://s3.fightforthefuture.org/img/action-network/chelsea1.png">
+<meta name="twitter:image" content="https://www.freechelsea.com/chelseashare.jpg">
 
 <!-- google+ -->
 <meta itemprop="name" content="Chelsea Manning is being charged for her own suicide attempt.">
