--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.freechelsea.com%2F" class="stickybar-facebook-share">
         facebook
       </a>
-      <a href="https://twitter.com/intent/tweet?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse&amp;url=https%3A%2F%2Fwww.freechelsea.com%2F&amp;hashtags=StandWithChelsea" class="stickybar-twitter-share">
+      <a href="https://twitter.com/intent/tweet?text=Chelsea%20Manning%20faces%20indefinite%20solitary%20for%20trying%20to%20take%20own%20her%20life%20after%20years%20of%20abuse.%20https%3A%2F%2Fwww.freechelsea.com%2F%20Petition%20to%20%40SecArmy" class="stickybar-twitter-share">
         Twitter
       </a>
     </li>
@@ -1187,7 +1187,7 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
     <a class="share-this-fb" href="https://facebook.com/sharer.php?u=https%3A%2F%2Fwww.freechelsea.com%2F">
       Share this
     </a>
-    <a class="share-this-tw" href="https://twitter.com/share?text=Chelsea+Manning+faces+indefinite+solitary+for+trying+to+take+own+her+life+after+years+of+abuse&amp;url=https%3A%2F%2Fwww.freechelsea.com%2F&amp;hashtags=StandWithChelsea">
+    <a class="share-this-tw" href="https://twitter.com/share?text=Chelsea%20Manning%20faces%20indefinite%20solitary%20for%20trying%20to%20take%20own%20her%20life%20after%20years%20of%20abuse.%20https%3A%2F%2Fwww.freechelsea.com%2F%20Petition%20to%20%40SecArmy">
       Tweet this
     </a>
     <a class="share-this-donate" href="https://donate.fightforthefuture.org/?utm_source=share-this-buttons&amp;utm_medium=web&amp;utm_campaign=save-chelsea">
