--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </a>
     </li>
     <li class="stickybar-donate">
-      <a href="https://donate.fightforthefuture.org?amount=5&amp;frequency=just-once&amp;utm_source=petitions&amp;utm_medium=web&amp;utm_campaign=save-chelsea">
+      <a href="https://donate.fightforthefuture.org?amount=5&amp;frequency=just-once&amp;utm_source=petitions&amp;utm_medium=web&amp;utm_campaign=save-chelsea&amp;tag=free-chelsea">
         Donate $5
       </a>
     </li>
@@ -1190,7 +1190,7 @@ Chelsea has been systematically mistreated by the U.S. government since she was 
     <a class="share-this-tw" href="https://twitter.com/intent/tweet?text=Chelsea%20Manning%20faces%20indefinite%20solitary%20after%20suicide%20attempt%20following%20years%20of%20abuse.%20%40SecArmy&amp;hashtags=StandWithChelsea">
       Tweet this
     </a>
-    <a class="share-this-donate" href="https://donate.fightforthefuture.org/?utm_source=share-this-buttons&amp;utm_medium=web&amp;utm_campaign=save-chelsea">
+    <a class="share-this-donate" href="https://donate.fightforthefuture.org/?utm_source=share-this-buttons&amp;utm_medium=web&amp;utm_campaign=save-chelsea&amp;tag=free-chelsea">
       Donate $5
     </a>
   </section>
