--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 
 
-
+<script type="text/javascript">
+  window.DONATE_URL = 'https://donate.fightforthefuture.org?amount=5&amp;frequency=just-once&amp;utm_source=petitions&amp;utm_medium=web&amp;utm_campaign=save-chelsea&amp;tag=free-chelsea';
+</script>
 
 <link rel="stylesheet" type="text/css" href="https://s3.fightforthefuture.org/css/petitions.css?1470146302306">
 
